Fix rest of the tests